# PWM-fan-controller

./: .gitignore  README.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  post-create.sh
app/: CMakeLists.txt  app.overlay  app.py  main.py  prj.conf
app/src/: app_logic.c  zbus_defs.c
firmware/: CMakeLists.txt  Kconfig  debug.conf  prj.conf  production.conf  west.yml
firmware/boards/: nucleo_f303re.overlay  nucleo_f446ze.overlay  nucleo_h533re.overlay  nucleo_l476rg.overlay  stm32f4_disco.overlay
firmware/debug/: CMakeLists.txt  ozone-project.jdebug.in
firmware/src/common/: CMakeLists.txt  message_channel.c  message_channel.h
firmware/src/modules/control_mgr/: CMakeLists.txt  control_mgr.c
firmware/src/modules/sensor_mgr/: CMakeLists.txt  sensor_mgr.c
firmware/src/modules/tacho_mgr/: CMakeLists.txt  tacho_mgr.c
firmware/src/modules/usb_mgr/: CMakeLists.txt  usb_handlers.c  usb_handlers.h  usb_mgr.c  usbd_init.c  usbd_init.h
